--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">clientMobile</string>
+    <string name="app_name">Sidi Client Mobile</string>
+    <string name="SIDI_URL">http://8ec8af49c916.ngrok.io/</string>
+    <!-- Error messages -->
+    <string name="error_fragment_message">An error occurred</string>
 </resources>
